# torrent-client

./: .gitignore  CMakeLists.txt  README.md  mytorrent.sh
bittorrent/bencode/: bencode.hpp
bittorrent/bencode/tests/: build.sh  integer_tests.txt  test_runner.cpp
bittorrent/logger/: logger.cpp  logger.hpp
bittorrent/logger/tests/: CMakeLists.txt  test_logger.cpp
bittorrent/metainfo/: metainfo.cpp  metainfo.hpp
bittorrent/metainfo/tests/: CMakeLists.txt  metainfo_test.cpp
bittorrent/tracker/include/: compact_peer_codec.hpp  endpoint.hpp  expected.hpp  http_client.hpp  http_tracker.hpp  iclient.hpp  manager.hpp  sample.txt  types.hpp  udp_tracker.hpp  udp_url.hpp
bittorrent/tracker/src/: compact_peer.cpp  endpoint.cpp  http_client_curl.cpp  http_tracker.cpp  manager.cpp  types.cpp  udp_tracker.cpp  udp_url.cpp
bittorrent/tracker/tests/: CMakeLists.txt  archive_1.torrent  archive_2.torrent  demo_tracker.cpp  run_tests.sh  test_compact_peer.cpp  test_endpoint.cpp  test_http_tracker.cpp  test_tracker_manager.cpp  test_types.cpp  test_udp_tracker.cpp
docs/: plantuml.puml
include/bencode/: CMakeLists.txt  bencode.cpp  bencode.hpp
include/bencode/tests/: bencode_infoslice_tests.txt  test_runner.cpp
include/bencode_parser/: CMakeLists.txt  bencode_parser.cpp  bencode_parser.hpp  unit_test.cpp
include/bittorrent/: bencode.hpp
include/bittorrent/metainfo/: metainfo.cpp  metainfo.hpp
include/bittorrent/metainfo/test/: CMakeLists.txt  build.sh  metainfo_test.cpp
samples/: archive_3.torrent
src/: bencode.cpp  dict_tests.txt  list_tests.txt  main.cpp  notes.txt  old_main.txt  tracker.cpp
